<resources>
    <string name="app_name">NMedia</string>
    <string name="textViewContent">NMedia!</string>
    <string name="posts_author_avatar">Avatar</string>
    <string name="post_more_menu">More</string>
    <string name="like_button">Like</string>
    <string name="share">Share</string>
    <string name="views">Read</string>
    <string name="cancelEditingButton">Edit cancel button</string>
    <string name="postContent">Post text</string>
    <string name="label_post_edit_title">Post editing</string>
    <string name="send_button">Send button</string>
    <string name="editPostMenuElement">Edit</string>
    <string name="removePostMenuElement">Remove</string>
    <string name="video_preview">Video preview</string>
    <string name="video_preview_button">Play video button</string>
    <string name="save_post_content">Save post content</string>
    <string name="settings_save_error_message">Error while saving settings</string>
    <string name="channel_remote_name">Messages</string>
    <string name="channel_remote_description">Channel for messages</string>
    <string name="notification_user_liked">%1$s published new post:</string>
    <string name="SNACKBAR_ERROR">Something went wrong, try again later</string>
    <string name="error_loading">Loading error</string>
    <string name="retry_loading">Retry load</string>
    <string name="empty_posts">Nothing here</string>
    <string name="sendming_message_toast">Sending message …</string>
    <string name="attachment_image">Attachment image</string>
    <string name="repeat">Repeat</string>
    <string name="new_messages">New messages</string>
    <string name="label_new_post_title">New post</string>
    <string name="post_details_title">Details</string>
    <string name="message_text_hint">Message text</string>
    <string name="take_photo_button">Take photo button</string>
    <string name="take_image_from_gallery">Take image from gallery button</string>
    <string name="clear_button">Clear</string>
    <string name="attachment_image_preview">Attachment image preview</string>
    <string name="attachment_image_preview_title">Image</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="sign_in_label">Sign in</string>
    <string name="submit_button_text">Submit</string>
    <string name="password_label">Password</string>
    <string name="login_label">Login</string>
    <string name="check_internet_connection_text">Check internet connection!</string>
    <string name="ok_button_text">OK</string>
    <string name="check_login_password_message">Check login and password!</string>
    <string name="unknown_error_text">Unknown error!</string>
    <string name="login_to_like_message">Please login to like!</string>
    <string name="please_login_to_write_posts_message">Please login to write posts!</string>
    <string name="are_you_sure_want_to_logout_message">Are you sure you want to log out?</string>
    <string name="no_answer_text">No</string>
    <string name="yes_answer_text">Yes</string>
    <string name="you_cant_like_own_posts_message">You can\'t like your own posts!</string>
    <string name="password_label_confirm">Password confirm</string>
    <string name="name_label">Name</string>
    <string name="sign_up_label">Registration</string>
    <string name="user_already_exists_message">User already exists!</string>
    <string name="change_avatar_button_text">Change avatar</string>
    <string name="clear_avatar_button_text">Clear avatar</string>
</resources>