<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/splashScreenFragment">

    <fragment
        android:id="@+id/imageViewerFullscreenFragment"
        android:name="ru.netology.nmedia.presentation.fragments.ImageViewerFullscreen"
        android:label="@string/attachment_image_preview_title"
        tools:layout="@layout/fragment_image_viewer" />

    <fragment
        android:id="@+id/AuthFragment"
        android:name="ru.netology.nmedia.presentation.fragments.AuthFragment"
        android:label="@string/sign_in_label"
        tools:layout="@layout/fragment_auth" />

    <fragment
        android:id="@+id/SignUpFragment"
        android:name="ru.netology.nmedia.presentation.fragments.SignUpFragment"
        android:label="@string/sign_up_label"
        tools:layout="@layout/fragment_sign_up" />

    <fragment
        android:id="@+id/feedFragment"
        android:name="ru.netology.nmedia.presentation.fragments.FeedFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_feed">
        <action
            android:id="@+id/feedFragmentToEditPostFragment"
            app:destination="@id/editPostFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/feedFragmentToPostDetailsFragment"
            app:destination="@id/postDetailsFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />

    </fragment>
    <fragment
        android:id="@+id/editPostFragment"
        android:name="ru.netology.nmedia.presentation.fragments.FragmentEditPost"
        android:label=""
        tools:layout="@layout/fragment_edit_post" />
    <fragment
        android:id="@+id/postDetailsFragment"
        android:name="ru.netology.nmedia.presentation.fragments.FragmentPostDetails"
        android:label="@string/post_details_title"
        tools:layout="@layout/fragment_post_details">
        <action
            android:id="@+id/postDetailFragmentToEditPostFragment"
            app:destination="@id/editPostFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/splashScreenFragment"
        android:name="ru.netology.nmedia.presentation.fragments.SplashScreenFragment"
        android:label="fragment_splash_screen"
        tools:layout="@layout/fragment_splash_screen">
        <action
            android:id="@+id/action_splashScreenFragment_to_feedFragment"
            app:destination="@id/feedFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out"
            app:popUpToInclusive="false" />
    </fragment>
    <action
        android:id="@+id/action_global_editPostFragment"
        app:destination="@id/editPostFragment"
        app:enterAnim="@android:anim/fade_in"
        app:exitAnim="@android:anim/fade_out"
        app:popEnterAnim="@android:anim/fade_in"
        app:popExitAnim="@android:anim/fade_out" />

    <action
        android:id="@+id/action_global_imageViewerFragment"
        app:destination="@id/imageViewerFullscreenFragment"
        app:enterAnim="@android:anim/fade_in"
        app:exitAnim="@android:anim/fade_out"
        app:popEnterAnim="@android:anim/fade_in"
        app:popExitAnim="@android:anim/fade_out" />

    <action
        android:id="@+id/action_global_authFragment"
        app:destination="@id/AuthFragment"
        app:enterAnim="@android:anim/fade_in"
        app:exitAnim="@android:anim/fade_out"
        app:popEnterAnim="@android:anim/fade_in"
        app:popExitAnim="@android:anim/fade_out" />

    <action
        android:id="@+id/action_global_SignUpFragment"
        app:destination="@id/SignUpFragment"
        app:enterAnim="@android:anim/fade_in"
        app:exitAnim="@android:anim/fade_out"
        app:popEnterAnim="@android:anim/fade_in"
        app:popExitAnim="@android:anim/fade_out" />


</navigation>