<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="ru.netology.nmedia.presentation.SignUpViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/Theme.NMedia.Toolbar"
                app:layout_scrollFlags="scroll|enterAlways"
                tools:title="Register" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/mainScroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_label">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="top"
                        android:importantForAutofill="no"
                        android:inputType="textNoSuggestions"
                        android:minLines="10"
                        android:scrollbars="vertical"
                        android:text="@={viewModel.data.name}"
                        app:placeholderText="Enter login"
                        tools:text="student" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_label">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="top"
                        android:importantForAutofill="no"
                        android:inputType="textNoSuggestions"
                        android:minLines="10"
                        android:scrollbars="vertical"
                        android:text="@={viewModel.data.login}"
                        app:placeholderText="Enter login"
                        tools:text="student" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_label">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="top"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:minLines="10"
                        android:scrollbars="vertical"
                        android:text="@={viewModel.data.password}"
                        app:placeholderText="Enter password"
                        tools:text="12345" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_label_confirm">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="top"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:minLines="10"
                        android:scrollbars="vertical"
                        android:text="@={viewModel.data.password_confirm}"
                        app:placeholderText="Enter password"
                        tools:text="12345" />
                </com.google.android.material.textfield.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/posts_margins">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/avatar"
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:layout_gravity="center"
                        tools:src="@tools:sample/avatars"
                        app:shapeAppearanceOverlay="@style/AvatarImageView.Corner"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/avatarButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/change_avatar_button_text" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/avatarButtonClear"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/clear_avatar_button_text"
                            android:visibility="gone"
                            tools:visibility="visible"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


        </androidx.core.widget.NestedScrollView>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/snackBarCoordinator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_button_text" />
    </LinearLayout>
</layout>